# claude-config

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  debug  file-history  learnings  plans  projects  pyproject.toml  requirements.txt  resources  session-env  settings.json  shell-snapshots  statsig  todos
agents/: accessibility-reviewer.md  ai-engineer.md  api-designer.md  backend-architect.md  batch-editor.md  build-expert.md  claude-config-expert.md  code-reviewer.md  context-optimizer.md  cpp-expert.md  cross-platform-tester.md  database-architect.md  database-optimizer.md  dead-code-finder.md  dependency-auditor.md  dependency-updater.md  devops-troubleshooter.md  doc-generator.md  error-explainer.md  file-summarizer.md  flaky-test-fixer.md  format-converter.md  git-archaeologist.md  git-expert.md  impact-analyzer.md  import-optimizer.md  mavlink-expert.md  migration-planner.md  observability-engineer.md  orchestrator.md  perf-reviewer.md  prompt-engineer.md  protocol-analyzer.md  qgc-architect.md  qt-expert.md  qt-qml-expert.md  quick-explorer.md  quick-lookup.md  quick-researcher.md  real-time-systems.md  (+8 more)
backlog/: improvements.md
backups/: README.md
commands/: changelog.md  checkpoint.md  ci-fix.md  commit.md  config-audit.md  debug.md  deep-review.md  docs.md  flow.md  implement.md  lint.md  optimize-context.md  pipeline.md  pr.md  queue.md  refactor.md  review.md  security.md  status.md  summarize.md  tech-debt.md  test.md  understand.md  worktree.md
docs/: README.md  config-patterns.md
examples/: README.md
hooks/: __init__.py  agent_chaining.py  auto_continue.py  batch_operation_detector.py  build_analyzer.py  config.py  context_checkpoint.py  context_monitor.py  credential_scanner.py  dangerous_command_blocker.py  dispatcher_base.py  exploration_cache.py  file_access_tracker.py  file_monitor.py  file_protection.py  hierarchical_rules.py  hook_sdk.py  hook_utils.py  notify_complete.py  notify_complete_async.sh  (+30 more)
(+394 files in other folders)
