[project]
name = "claude-hooks"
version = "1.1.0"
description = "Python dependencies for Claude Code hooks"
requires-python = ">=3.10"

dependencies = [
    "tiktoken>=0.5.0",
    "rapidfuzz>=3.0.0",
    "msgspec>=0.18.0",
    "cachetools>=5.3.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
py-modules = []
packages = []

[tool.pytest.ini_options]
testpaths = ["hooks/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
