[project]
name = "claude-hooks"
version = "1.1.0"
description = "Python dependencies for Claude Code hooks"
requires-python = ">=3.10"

dependencies = [
    "tiktoken>=0.5.0",
    "rapidfuzz>=3.0.0",
    "msgspec>=0.20.0",
    "cachetools>=5.3.0",
    "filelock>=3.12.0",
    "diskcache>=5.6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hooks*", "config*"]

[tool.pytest.ini_options]
testpaths = ["hooks/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
cache_dir = "data/.pytest_cache"
